# pdopt-code

./: .gitignore  LICENSE  README.md  mkdocs.yml  requirements.txt  setup.cfg  setup.py
.github/: draft-pdf.yml
.github/workflows/: draft-pdf.yml  pytest.yml
docs/: data.md  exploration.md  index.md  methodology.md  optimization.md  requirements.txt  tools.md  tutorial.md  usage.md
example/: README.md  energy_management_experiment.py
example/example_1/: HE_Model.py  energy_management_experiment.py
example/example_1/data/: mission_old.csv
example/example_1/test_case_linear/: design_space.pk  exp_results.csv  exploration.pk  samples.csv
example/example_2/: HE_Model.py  energy_management_experiment.py  engine_map.py
example/example_2/data/: baseline.csv  (+4 more)
example/test_case_linear/: design_space.pk  exp_results.csv  exploration.pk  samples.csv
paper/: paper.bib  paper.md
pdopt/: __init__.py  data.py  exp_data.csv  exp_test.pk  exploration.py  exploration_test.csv  exploration_visualiser.py  global_opt_input.csv  opt_out.csv  optimisation.py  optimisation_test.csv  test_input.csv  test_matrix.csv  test_response.csv  test_response_1.csv  test_response_2.csv  tmp_data.csv  tools.py  uq_prototype.py
src/pdopt/: __init__.py  bn_prototype.py  data.py  exploration.py  optimisation.py  tools.py  visualisation.py
tests/: design_space.pk  test_data.py  test_exploration.py  test_input.csv  test_optimisation.py  test_report.txt  test_report_expected.txt  test_response.csv  test_tools.py  test_train_exploration_data.csv  test_validation_exploration_data.csv
tests/test_files/: design_space.pk  test_input.csv  test_myDesignSpace.pk  test_report.txt  test_response.csv
(+18 files in other folders)
