[metadata]
name = pdopt
version = attr: pdopt.data.__version__
author = Andrea Spinelli
author_email = andrea.spinelli@cranfield.ac.uk
url = https://github.com/spinjet/pdopt-code
description = Package for Probabilistic Design Space Exploration using Set-Based Design
long_description = file: README.md
long_description_content_type = text/markdown
keywords = set-based design, design space exploration, optimization, engineering design
license = MIT License
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3

[options]
packages = find:
package_dir=
    =src
zip_safe = True
include_package_data = True
install_requires =
	numpy
	scipy
	matplotlib
	pandas
	scikit-learn
	pymoo>="0.6.0"
	joblib
	tqdm

[options.packages.find]
where=src
	
[options.extras_require]
viz = 	plotly; dash
